add user posts and users rated posts to profile page and fix sign up request
